// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-ivKqQM hinzSz aje-combobox sc-cxxQMU jlrvPm is-medium"
  >
    <label
      class="sc-crPgjm gzYIYu"
      for="react-aria-:r3:"
      id="react-aria-:r4:"
    >
      Text Label
    </label>
    <p
      class="sc-dYjPD eNNyxf is-auto"
      id="react-aria-:r6:"
    >
      message
    </p>
    <div
      class="sc-hCcPtG rkCyy aje-combo-input"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="react-aria-:r6:"
        aria-expanded="false"
        aria-labelledby="react-aria-:r4:"
        autocomplete="off"
        autocorrect="off"
        class="sc-krVzYl ePxwJv is-full"
        id="react-aria-:r3:"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Show suggestions"
        aria-labelledby="react-aria-:r0: react-aria-:r4:"
        class="sc-gtcBCx sc-dkXsAU inNouS foOSKo aje-btn aje-icon-btn aje-btn--content is-auto"
        data-icon-button="true"
        id="react-aria-:r0:"
        tabindex="-1"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-bdDsCe czzecf aje-icon material-icons is-auto"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-ivKqQM hinzSz aje-combobox sc-cxxQMU jlrvPm aje-combobox--floating is-medium"
  >
    <div
      class="sc-bCgoVd kvFozl"
    >
      <div
        class="sc-hCcPtG rkCyy aje-combo-input"
      >
        <input
          aria-autocomplete="list"
          aria-describedby="react-aria-:rg:"
          aria-expanded="false"
          aria-labelledby="react-aria-:re:"
          autocomplete="off"
          autocorrect="off"
          class="sc-krVzYl ePxwJv is-full"
          id="react-aria-:rd:"
          role="combobox"
          spellcheck="false"
          tabindex="0"
          type="text"
          value=""
        />
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Show suggestions"
          aria-labelledby="react-aria-:ra: react-aria-:re:"
          class="sc-gtcBCx sc-dkXsAU inNouS foOSKo aje-btn aje-icon-btn aje-btn--content is-auto"
          data-icon-button="true"
          id="react-aria-:ra:"
          tabindex="-1"
          type="button"
        >
          <i
            aria-hidden="true"
            class="sc-bdDsCe czzecf aje-icon material-icons is-auto"
          >
            search
          </i>
        </button>
      </div>
      <label
        class="sc-crPgjm gzYIYu"
        for="react-aria-:rd:"
        id="react-aria-:re:"
      >
        Text Label
      </label>
    </div>
    <p
      class="sc-dYjPD eNNyxf is-auto"
      id="react-aria-:rg:"
    >
      message
    </p>
  </div>
</DocumentFragment>
`;
